# user-profile-server

./: .env  .env-example  Cargo.toml  README.md  build.rs
migrations/: 20210130201510_trigger.sql  20210130202421_initial_schema.sql  20210425162631_hosts_users_authorization.sql
migrations/2020-01-01-204833_create_machines/: down.sql  up.sql
migrations/2020-01-23-202143_create_machine_slug_unique_index/: up.sql
migrations/2020-02-25-233809_ditch_auth0/: up.sql
migrations/2020-02-27-182450_create_sessions/: up.sql
src/: auth-bck.rs  auth.rs  auth_context.rs  b58_fingerprint.rs  context.rs  graphql_schema.rs  hyper_server.rs  machine.rs  main copy.rs  main.rs  schema.rs  user.rs
src/host/: mod.rs
src/host/resolvers/: host_mutation_resolvers.rs  host_subscription_resolvers.rs  mod.rs
src/host_connector/: host_connection.rs  mod.rs  signal.rs
src/ice_server/: mod.rs
src/machine/: authorize_for_machine.rs  create_machine.rs  mod.rs  my_machines.rs  remove_machine.rs  set_machine_name.rs
src/machine/resolvers/: create_machine.rs  machine_mutation_resolvers.rs  machine_subscription_resolvers.rs  mod.rs  set_machine_name.rs
src/protos/: mod.rs  teg_protobufs.rs
src/resolvers/: mod.rs  my_namespace_resolvers.rs  query_resolvers.rs
src/user/: authorize_user.rs  current_user.rs  jwt.rs  login_with_password.rs  mod.rs  signup.rs
src/warp_sessions/: filters.rs  mod.rs  signed_session.rs  sqlx_store.rs
