[package]
name = "user-profile-server"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.6.1"

[dependencies]
dotenv = "0.15.0"
# Using git version until tokio 1.0 support drops in sqlx 0.5
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [ "runtime-tokio-rustls", "postgres", "offline", "json", "macros", "chrono" ] }
anyhow = "1.0"
async-trait = "0.1.48"
tracing = "0.1.25"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
warp = "0.3.0"
futures = "0.3.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.1"
chrono = { version = "0.4.10", features = ["serde"] }
frank_jwt = "3.1.2"
surf = "2.1.0"
http-client = { version = "1.1.1", features = ["native_client"] }
openssl = "0.10.32"
gravatar = "0.2.0"

# async-graphql = { git = "https://github.com/async-graphql/async-graphql.git", features = ["tracing",  "chrono", "url"] }
# async-graphql-warp = { git = "https://github.com/async-graphql/async-graphql.git" }

# async-graphql = { version = "2.6.5", features = ["tracing",  "chrono", "url"] }
# async-graphql-warp = "2.6.5"

async-graphql = { git = "https://github.com/d1plo1d/async-graphql.git", branch="fix/warp-websocket-pings", features = ["tracing",  "chrono", "url"] }
async-graphql-warp = { git = "https://github.com/d1plo1d/async-graphql.git", branch="fix/warp-websocket-pings" }

tokio = { version = "1.1.0", features = ["full"] }
arc-swap = "1.2.0"
eyre = "0.6.5"
dashmap = "4.0.2"
xactor = { git = "https://github.com/sunli829/xactor.git", branch = "master",  default-features = false, features = ["runtime-tokio", "eyre"] }
nanoid = "0.3.0"
bs58 = "0.4.0"
base64 = "0.12.3"
lazy_static = "1.4.0"
prost = "0.6.1"
